# coaction

./: .gitignore  LICENSE  MANIFEST.in  README.md  create_project_template.sh  pyproject.toml  run_project.sh
coaction/: __init__.py  create.py  run.py
coaction/_templates/: _agent.txt  _project_config.txt
coaction/agents/: __init__.py  agent.py
coaction/agents/fictitious_play/: __init__.py  async_fp.py  async_sfp.py  model_free_fp.py  model_free_sfp.py  sync_fp.py  sync_sfp.py  utils.py
coaction/agents/ind_q/: __init__.py  ind_q.py  utils.py
coaction/experiments/: __init__.py  callbacks.py  config.py  episode.py  experiment.py  multiprocessing.py  project.py
coaction/games/: __init__.py  game.py
coaction/loggers/: __init__.py  agent.py  game.py  loader.py  logger.py  progress.py
coaction/plotting/: loader.py
coaction/utils/: __init__.py  games.py  io.py  math.py  modules.py  paths.py  progress.py  time.py
