[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coaction"
version = "0.0.1"
authors = [
  { name="Yiğit Yalın", email="yigityalin@outlook.com" },
]
description = "A library for multi-agent learning that aims to accelarate the research."
readme = "README.md"
requires-python = ">=3.11.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.2",
]

[project.urls]
"Homepage" = "https://github.com/yigityalin/coaction"
"Bug Tracker" = "https://github.com/yigityalin/coaction/issues"
